# bink-sdk-stub

./: CMakeLists.txt  bink.c  bink.h  bink_mingw.def
cmake/: BinkStubConfig.cmake.in
